--- a/components/editor/gaea-editor/gaea-editor/panel/edit-box/basic/edit-components/instance/instance.scss
+++ b/components/editor/gaea-editor/gaea-editor/panel/edit-box/basic/edit-components/instance/instance.scss
@@ -1,3 +1,14 @@
 & {
     display: flex;
+    margin: -3px;
+}
+
+.instance-item {
+    cursor: pointer;
+    margin: 3px;
+    transition: outline .3s;
+    outline: 1px solid transparent;
+    &:hover {
+        outline: 1px solid #ccc;
+    }
 }
