--- a/client/layout/layout.scss
+++ b/client/layout/layout.scss
@@ -43,8 +43,7 @@
     position: absolute;
     left: 0;
     height: 3px;
-    background-color: #af31b1;
-    opacity: .3;
+    background-color: #8e307e;
     z-index: 10;
 }
 
@@ -55,7 +54,7 @@
 }
 
 .loading-end {
-    animation: loading-from-start 0.01s;
+    animation: loading-from-start .3s;
     animation-iteration-count: 1;
     animation-fill-mode: none;
 }
@@ -78,8 +77,10 @@
 @keyframes loading-from-start {
     0% {
         width: 100%;
+        background-color: #8e307e;
     }
     100% {
         width: 100%;
+        background-color: #67315e;
     }
 }
