--- a/components/editor/gaea-editor/gaea-editor/panel/edit-box/event/event.scss
+++ b/components/editor/gaea-editor/gaea-editor/panel/edit-box/event/event.scss
@@ -5,9 +5,19 @@
 .event-container {
     display: flex;
     flex-direction: column;
+    margin-bottom: 20px;
 }
 
 .event-item-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.event-choose-container {
+    display: flex;
+}
+
+.event-editor-container {
     display: flex;
 }
 
@@ -19,11 +29,23 @@
 
 .event-effect {
     display: flex;
-    flex-grow: 2;
+    flex-grow: 1;
     width: 0;
     margin-left: 10px;
 }
 
 .new-event-button {
-    margin-top: 20px;
+
+}
+
+.close-container {
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 10px;
+    width: 20px;
+    color: #999;
+    cursor: pointer;
+    &:hover {
+        color: #333;
+    }
 }
