--- a/components/editor/gaea-editor/lib/gaea-editor/page/page.css
+++ b/components/editor/gaea-editor/lib/gaea-editor/page/page.css
@@ -64,13 +64,18 @@
   display: flex;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
-          flex-grow: 1; }
+          flex-grow: 1;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
   .nt-editor-gaea-editor-gaea_editor-page .viewport-main-content-outer .viewport-main-content {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    position: relative;
-    margin: 0 auto; }
+    position: relative; }
 
 .nt-editor-gaea-editor-gaea_editor-page .left-bar, .nt-editor-gaea-editor-gaea_editor-page .right-bar {
   display: -webkit-box;
