--- a/client/routes/+designer-home/designer-home.scss
+++ b/client/routes/+designer-home/designer-home.scss
@@ -6,6 +6,9 @@
         width: 100%;
         height: 100%;
     }
+    .video--loading {
+        width: 100%;
+    }
     .modal-body {
         padding: 0;
     }
@@ -92,7 +95,7 @@
     }
 }
 
-.helper-title {
+.helper-title, .dev-doc-title {
     font-size: 26px;
     font-weight: bold;
     padding-bottom: 15px;
@@ -121,10 +124,21 @@
         position: relative;
         cursor: pointer;
         margin: 20px;
+        border: 2px solid white;
         .helper-image {
             width: 100%;
             height: 100%;
             opacity: 0.7;
+        }
+        .helper-description-shadow {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #231042;
+            opacity: 0.6;
+            z-index: 0;
         }
         .helper-description-container {
             display: flex;
@@ -136,33 +150,38 @@
             top: 0;
             width: 100%;
             height: 100%;
+            z-index: 1;
+            color: white;
             .title {
                 font-size: 20px;
                 font-weight: bold;
-                z-index: 1;
+                z-index: 12;
+                transition: all .3s;
             }
             .description {
                 margin-top: 10px;
                 font-size: 12px;
                 font-weight: bold;
-                z-index: 1;
+                z-index: 2;
             }
             .play-icon {
                 position: absolute;
-                font-size: 70px;
+                font-size: 30px;
                 opacity: 0.2;
-                left: 70px;
-                top: 38px;
-                height: 100px;
-                z-index: 0;
+                left: 20px;
+                bottom: 10px;
+                z-index: 1;
                 transition: opacity 0.3s;
             }
         }
         &:hover {
+            box-shadow: 0 0 5px #8b28d0 inset;
             .play-icon {
                 opacity: 0.5;
             }
-            box-shadow: 0 0 5px #8b28d0 inset;
+            .title {
+                transform: scale(1.2);
+            }
         }
     }
 }
